--- a/index.html
+++ b/index.html
@@ -393,5 +393,89 @@
         </div>
       </div>
     </section>
+
+    <section class="container mx-auto max-w-[1220px] mt-[100px]">
+      <h1 class="text-[48px]">Этапы поставки</h1>
+
+      <div class="">
+        <div
+          class="flex gap-[56px] w-[95%] h-[245px] bg-white shadow-xs hover:scale-[1.05] ease-in shadow-black ml-[60px] rounded-xl mt-[50px]"
+        >
+          <img
+            class="w-[331px] h-[181px] mt-[33px] ml-[90px]"
+            src="./image/dostafkaimg1.png"
+            alt=""
+          />
+          <div class="flex flex-col mt-[33px]">
+            <h1
+              class="text-[20px] font-semibold border-b-[1px] border-b-[2px] border-[#FFCE50] pb-[24px] mb-[24px]"
+            >
+              Предложение от продавца
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor <br />
+              incididunt ut labore et dolore magna aliqua. Elit duis tristique
+              sollicitudin nibh sit <br />
+              amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis
+              urna cursus eget <br />
+              nunc scelerisque viverra mauris in.
+            </p>
+          </div>
+        </div>
+        <div
+          class="flex gap-[56px] w-[95%] h-[245px] bg-white shadow-xs hover:scale-[1.05] ease-in shadow-black ml-[60px] rounded-xl mt-[50px]"
+        >
+          <img
+            class="w-[331px] h-[181px] mt-[33px] ml-[90px]"
+            src="./image/dostafkaimg1.png"
+            alt=""
+          />
+          <div class="flex flex-col mt-[33px]">
+            <h1
+              class="text-[20px] font-semibold border-b-[1px] border-b-[2px] border-[#FFCE50] pb-[24px] mb-[24px]"
+            >
+              Предложение от продавца
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor <br />
+              incididunt ut labore et dolore magna aliqua. Elit duis tristique
+              sollicitudin nibh sit <br />
+              amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis
+              urna cursus eget <br />
+              nunc scelerisque viverra mauris in.
+            </p>
+          </div>
+        </div>
+        <div
+          class="flex gap-[56px] w-[95%] h-[245px] bg-white shadow-xs hover:scale-[1.05] ease-in shadow-black ml-[60px] rounded-xl mt-[50px]"
+        >
+          <img
+            class="w-[331px] h-[181px] mt-[33px] ml-[90px]"
+            src="./image/dostafkaimg1.png"
+            alt=""
+          />
+          <div class="flex flex-col mt-[33px]">
+            <h1
+              class="text-[20px] font-semibold border-b-[1px] ease-in-out border-b-[2px] border-[#FFCE50] pb-[24px] mb-[24px]"
+            >
+              Предложение от продавца
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor <br />
+              incididunt ut labore et dolore magna aliqua. Elit duis tristique
+              sollicitudin nibh sit <br />
+              amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis
+              urna cursus eget <br />
+              nunc scelerisque viverra mauris in.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class=""></section>
   </body>
 </html>
