--- a/index.html
+++ b/index.html
@@ -476,6 +476,56 @@
       </div>
     </section>
 
-    <section class=""></section>
+    <section class="container mx-auto max-w-[1220px] mt-[90px]">
+      <h1 class="text-[48px]">Нам доверяют</h1>
+      <div class="flex gap-[133px] ml-[136px] mt-[20px]">
+        <div class="border-r-[1px] pr-[50px]">
+          <img src="image/./lgo1.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] flex justify-center text-[14px]">
+            Корпорация атомной энергии
+          </p>
+        </div>
+        <div class="border-r-[1px] flex flex-col justify-center pr-[100px]">
+          <img src="image/./gaz.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] text-[14px]">Корпорация атомной энергии</p>
+        </div>
+        <div class="border-r-[1px] pr-[100px]">
+          <img src="image/./neft.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] text-[14px]">Корпорация атомной энергии</p>
+        </div>
+        <div class="">
+          <img src="image/./kosmos.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] text-[14px]">Корпорация атомной энергии</p>
+        </div>
+      </div>
+      <div class="flex gap-[133px] ml-[136px] mt-[50px]">
+        <div class="border-r-[1px] pr-[50px]">
+          <img src="image/./lukoy.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] flex justify-center text-[14px]">
+            Корпорация атомной энергии
+          </p>
+        </div>
+        <div class="border-r-[1px] flex flex-col justify-center pr-[100px]">
+          <img src="image/./inter.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] text-[14px]">Корпорация атомной энергии</p>
+        </div>
+        <div class="border-r-[1px] pr-[100px]">
+          <img src="image/./rostech.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] text-[14px]">Корпорация атомной энергии</p>
+        </div>
+        <div class="">
+          <img src="image/./8.png" alt="" />
+          <b class="text-[20px]">Росатом</b>
+          <p class="text-[#6B6B6C] text-[14px]">Корпорация атомной энергии</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
